tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview', '--add-opens=java.base/java.lang=ALL-UNNAMED']
}

java {
    sourceCompatibility = JavaVersion.VERSION_20
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

test {
    systemProperty("junit.jupiter.extensions.autodetection.enabled", true)
}